Final file structure for Testbed design

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -139,7 +139,8 @@
   doi       = {10.1109/RADAR.2016.8059601}
 }
 
-@article{DVBsignal,
+% MULTI SIGNAL
+@article{DVBsignal, 
   author  = {Edrich, Michael and Schroeder, Alexander and Meyer, Fabienne},
   title   = {Design and performance evaluation of a mature FM/DAB/DVB-T multi-illuminator passive radar system},
   journal = {IET Radar, Sonar \& Navigation},
@@ -517,5 +518,43 @@
   note = {Accessed: 2024-10-08}
 }
 
+@misc{SpectrumImage,
+  author = {{Australian Communications and Media Authority}},
+  title = {Australian Radiofrequency Spectrum Allocations Chart},
+  year = {2019},
+  url = {https://www.acma.gov.au/sites/default/files/2019-10/Australian%20radiofrequency%20spectrum%20allocations%20chart.pdf},
+  note = {Accessed: 2024-10-17}
+}
 
+@misc{LockheedRadar,
+  author = {Lockheed Martin},
+  title = {What is a Radar Band and Why is it Important?},
+  year = {2024},
+  url = {https://www.lockheedmartin.com/en-us/news/features/2024/what-is-a-radar-band-and-why-is-it-important.html},
+  note = {Accessed: 2024-10-17}
+}
 
+@article{AmbiguityCompare,
+  author = {J. M. Thomas and C. J. Baker and H. D. Griffiths},
+  title = {HF Passive Bistatic Radar: Potential and Applications for Remote Sensing},
+  journal = {IEEE Aerospace and Electronic Systems Magazine},
+  year = {2005},
+  publisher = {IEEE},
+  note = {Cite This, PDF available}
+}
+
+@article{satelliteIlluminator,
+  author    = {Martin Ummenhofer and Louis Cesbron Lavau and Diego Cristallini and Daniel O'Hagan},
+  title     = {UAV Micro-Doppler Signature Analysis Using DVB-S Based Passive Radar},
+  journal   = {IEEE},
+  year      = {2024},
+  note      = {Accessed: Oct. 17, 2024}
+}
+
+@article{DVB-S,
+    author    = {Stefan Brisken and Matteo Moscadelli and Viktor Seidel and Christoph Schwark},
+    title     = {Passive radar imaging using DVB-S2},
+    journal   = {IEEE},
+    year      = {2024},
+    note      = {Cite This},
+}
