--- a/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
@@ -17,7 +17,7 @@ To explore the feasibility of a low cost embedded passive bistatic radar detecti
 \begin{enumerate}
     \item Develop an understanding and proof of concept of passive radar detection algorithms on low cost single board computers (SBC) connected to software defined radio (SDR) hardware.
     \item Design and implement a small-sized modular passive radar detection system on single board computer hardware with an emphasis on user friendliness and scalability.
-    \item Verify the functionality of the low cost embedded passive radar detection system in a controlled environment against higher power computing results, and investigate the potential for scaling up to a multistatic system through a network. \todo{also compare SDR modules?}
+    \item Verify the functionality of the low cost embedded passive radar detection system in a controlled environment against higher power computing results, compare the efficacy of different SDR modules and investigate the potential for scaling up to a multistatic system through a network. 
 \end{enumerate}
 
 \section{Scope}
