--- a/eecs-thesis-template-main/thesis/sections/01_body/03_methodology.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/03_methodology.tex
@@ -143,10 +143,8 @@ It was necessary to have a range of hardware verification tests to ensure the an
 \subsection{Testbed Design \label{sec:testbed}}
 Building off the aforementioned hardware components, it was then necessary to develop a physical testbed setup that would allow for the SDR receiver module to be connected to the embedded computing platform, and for the entire system to be powered and networked. Also, given the scope of the project, it was necessary to have a protective encasing for the Rpi5 which also implemented user functionality (ie. pushbuttons and LED's). The testbed was designed to be portable and easily deployable, with the following key components and features:
 
-\todo[inline]{ADD IMAGE OF TESTBED}
-
 \begin{itemize}
-    \item \textbf{Enclosure:} A custom 3D printed enclosure was designed to house the RPi5, the RTL-SDR, and the NVME SSD HAT seen in \ref{fig:Rpi5}. The enclosure was designed to be compact and portable, with a small form factor that could be easily transported and deployed in various environments. The enclosure was designed to be easily opened and closed, with a removable top panel that allowed for easy access to the internal components. The printed acrylic was also designed for cooling purposes, with ventilation holes on the top and sides of the enclosure to allow for airflow, bolstered by the Rpi5 active cooling fan and heatsink. The model from Rasmussen was identified as a base model, with potential for appropriate modification \cite{RPiCase}. The base model can be viewed in the image below \todo{SHOW BASE MODEL}.
+    \item \textbf{Enclosure:} A custom 3D printed enclosure was designed to house the RPi5, the RTL-SDR, and the NVME SSD HAT seen in \ref{fig:Rpi5}. The enclosure was designed to be compact and portable, with a small form factor that could be easily transported and deployed in various environments. The enclosure was designed to be easily opened and closed, with a removable top panel that allowed for easy access to the internal components. The printed acrylic was also designed for cooling purposes, with ventilation holes on the top and sides of the enclosure to allow for airflow, bolstered by the Rpi5 active cooling fan and heatsink. The model from Rasmussen was identified as a base model, with potential for appropriate modification \cite{RPiCase}. 
     \item \textbf{User Interface:} It was envisaged that the testbed have some sort of capability that would enable physical triggering of PBR sampling and processing. Arcade style pushbuttons with LED's were selected to facilitate this interface \cite{pushbuttons}. It was envisaged that one pushbutton be responsible for signal sampling and the other a trigger for embedded edge processing. 
     \item \textbf{Power Supply:} A 5V / 15W power supply was used to power the RPi5, with a USB-C connector that allowed for easy connection to the RPi5. 
     \item \textbf{Networking:} The ethernet port on the Rpi5 was left unobstructed by the case for potential wired networking. With the main focus of being geared towards Wi-Fi based networking which was all facilitated by the Rpi5 system on chip.
@@ -190,10 +188,20 @@ Given the abundance of options explored in the background section, initially, th
 % METHOD FOR TESTING Comparison
 \section{Relevant Digital Signal Processing}
 
-Once the first phase of the testbed verification was completed, the next step was to implement the digital signal processing (DSP) algorithms that would be used to process the received signals and detect the presence of aerial vehicles, and then compare the results between the RTL-SDR and the LimeSDR, along with edge compute times (on the Rpi5) and higher level mac processing. Whilst both SDR implementations used the same fundamental DSP algorithms (FFT and autocorrelate), there were some system factors that were impacted by the comparison. 
+Once the first phase of the testbed verification was completed, the next step was to implement the digital signal processing (DSP) algorithms that would be used to process the received signals and detect the presence of aerial vehicles, and then compare the results between the RTL-SDR and the LimeSDR, along with edge compute times (on the Rpi5) and higher level mac processing. Whilst both SDR implementations used the same fundamental DSP algorithms (FFT and autocorrelate), there were some system factors that were impacted by the comparison. A high level overview of the processing chain can be seen in the block diagram below \ref{fig:processingChain}:
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{SystemFlow.png}
+    \caption{Digital Signal Processing Chain}
+    \label{fig:processingChain}
+\end{figure}
+
+\subsection{Selection of Illuminator Signal}
+The illuminator of opportunity primarily explored for this project is the DAB+ signal, and the target signal will be aerial vehicles - most likely in the form of civillian passenger jets. The DAB+ signal is a good option due to its high power density, and its relatively high bandwidth, which can be used to improve the radar's resolution and ability to distinguish between targets and clutter. Moreover, the geographical proximity of a DAB+ transmitter at Mt Cootha to the University of Queensland, St Lucia campus, making it a potentially ideal choice for the project. Another prospective digital illuminator signal is DVB-T (digital video broadcast - terrestrial), which is similar in its digital modulation to DAB, but provides increased bandwidth and signal power \cite{DVBsignal}.
 
 \subsection{Sampling Rate and Bandwidth}
-Fundamentally, the LimeSDR supports much higher sampling rates and bandwidths than the RTL-SDR, with the LimeSDR having a maximum sampling rate of 61.44MHz and a bandwidth of 61.44MHz, compared to the RTL-SDR which has a maximum sampling rate of 3.2MHz and a bandwidth of 3.2MHz. This difference in sampling rate and bandwidth has a direct impact on the range resolution of the radar system, with the LimeSDR being able to achieve much higher range resolution than the RTL-SDR. The sampling rate and bandwidth of the SDR modules were tested and compared, with the results discussed in the results section.
+Fundamentally, the LimeSDR supports much higher sampling rates and bandwidths than the RTL-SDR, with the LimeSDR having a maximum sampling rate of 61.44MHz compared to the RTL-SDR which has a maximum sampling rate of 3.2MHz. This difference in sampling rate and bandwidth has a direct impact on the range resolution of the radar system, with the LimeSDR being able to achieve much higher range resolution than the RTL-SDR. The sampling rate and bandwidth of the SDR modules were tested and compared, with the results discussed in the results section.
 
 \subsection{Method for Testing and Comparing LimeSDR and RTL-SDR}
 Both SDRs were connected to the RPi5 testbed and were used to receive the same digital broadcast signal. The received signals were then processed using the same DSP algorithms, and the results were compared. The following steps were taken to test and compare the LimeSDR and RTL-SDR:
